--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>dtmoney</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
   </head>
 
   <body>
